# tesseract-php

./: .gitignore  CMakeLists.txt  README.md  cppan.yml
examples/: base.php
src/: custom_object.cpp  custom_object.h  php_tesseract_php.h  pix.cpp  pix.h  tess_base_api.cpp  tess_base_api.h  tess_orc_engine_mode.cpp  tess_orc_engine_mode.h  tess_page_seg_mode.cpp  tess_page_seg_mode.h  tesseract_php.cpp
